<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/design"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="20dp"
        tools:context="com.almortah.almortah.Signup"
        android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/register"
            android:textColor="@color/colorDarkGrey"
            android:textSize="40sp" />

    <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/username" />


        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/fullname" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="9"
        android:minEms="9"
        android:minLines="9"
        android:digits="0123456789"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/verifyPassword"
            android:inputType="textPassword" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/type">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:text="@string/customer"
            android:id="@+id/customerType"
            android:checked="true"
            android:textSize="15sp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/chaletOwner"
            android:id="@+id/ownerType"
            android:textSize="15sp"/>
    </RadioGroup>
    <Button
        android:id="@+id/submitCustomer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorDarkGrey"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/colorWhite" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
