...
    <string name="drawer_close">Close</string>
    <string name="downChalet">Downloading Chalets</string>
    <string name="wait">Please wait</string>

    <!-- Strings related to Settings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="userType">Who are you?</string>
    <string name="afterSignup">Kindly login with your email/password</string>
    <string name="bookVistor">Kindly login to reserve this chalet</string>

    <!-- Error messages -->
    <string name="erVerifyPassword">Password not match</string>
...
