...
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/verifyPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submitOwner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:backgroundTint="#62BA60"
        android:gravity="center"
        android:text="@string/submit"
...
